updates
sb-contrib 7.6.4
maven-compiler-plugin 3.12.1
log4j2 2.22.1
slf4j 2.0.11
maven-jfx-plugin 3.3.2
checkstyle 10.12.7
dependency-check-maven 9.0.9
add -proc:full to compiler
maven-surefire-plugin 3.2.5
maven-surefire-report-plugin 3.2.5
spring-framework 6.1.3
fix null type safety issues
spotbugs-maven-plugin 4.8.3.0
update site.xml's xsd version
spring-boot 3.2.2